--- a/src/Json/Iosappdevelopment.json
+++ b/src/Json/Iosappdevelopment.json
@@ -45,7 +45,7 @@
             {
                 "heading": "Satisfaction of Clients",
                 "paragraph": "We put a lot of effort into making sure our clients are satisfied with their mobile app requirements. Whether it's a cross-platform or an android app, our objective is to create the best solution and represent the brand through in-depth business insights and our thorough research.",
-                "background": "#fff"
+                "background": "radial-gradient(circle, rgb(68 68 68 / 15%) 0%, rgb(68 68 68 / 5%) 35%, rgb(88 83 83 / 4%) 100%)"
             }
         ]
     },
@@ -55,6 +55,7 @@
         "image": "./src/assets/41.png",
         "alt": "technisum",
         "button": "Contact Us",
+        "btn-link" : "/contact-us",
         "background": "#FFF5FD"
     },
     "ctawithCard": {
@@ -67,6 +68,7 @@
         "image": "./src/assets/09.png",
         "alt": "technisum",
         "button": "Let's work together",
+        "btn-link" : "/contact-us",
         "card": "Beginning a Partnership"
     }
 }
